--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,8 @@ jobs:
           kubectl create secret generic database-secret --from-literal=database-url=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header) || true
       
       - name: Add registry to cluster
-        run: kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "do-registry"}]}'
+        run: | 
+          kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "do-registry"}]}'
 
       - name: Deploy to DigitalOcean Kubernetes
         run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
