--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -23,7 +23,7 @@ spec:
       - name: api
         image: <IMAGE>
         imagePullSecrets:
-          - name: api-registery   
+          - name: api-registry   
         ports:
         - containerPort: 80
         resources:
