--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Push image to DO Container Registry 
         run: docker push registry.digitalocean.com/dev-ops-novi-api/api:$(echo $GITHUB_SHA | head -c7)
 
+      - name: Navigate to Terraform directory
+        run: cd /config
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
