--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -28,7 +28,7 @@ jobs:
         run: ls
 
       - name: Navigate to Terraform directory
-        run: cd /config
+        run: cd config
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
