--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -31,12 +31,17 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 0.15.0
-          
+
       - name: Navigate to Terraform directory
-        run: cd config
+        run: |
+         ls
+         cd config
+         ls
 
       - name: Terraform Init
-        run: terraform init
+        run: |
+        ls
+        terraform init
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
