--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -25,7 +25,9 @@ jobs:
       #   run: docker push registry.digitalocean.com/dev-ops-novi-api/api:$(echo $GITHUB_SHA | head -c7)
 
       - name: folder structure
-        run: ls
+        run: |
+          ls
+          cd config
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
@@ -34,16 +36,20 @@ jobs:
 
       - name: Navigate to Terraform directory
         run: |
-         ls
+          cd config
+          ls
 
       - name: Terraform Init
         run: |
           ls
+          cd config
           terraform init
           ls
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: |
+          cd config
+          terraform apply -auto-approve
         env:
           DIGITALOCEAN_TOKEN: ${{ secrets.DIGITALOCEAN_TOKEN }}
           DATABASE_URL: $(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)
