--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -24,9 +24,8 @@ jobs:
       # - name: Push image to DO Container Registry 
       #   run: docker push registry.digitalocean.com/dev-ops-novi-api/api:$(echo $GITHUB_SHA | head -c7)
 
-      - name: folder structure
+      - name: navigate to Terrafom folder before setup
         run: |
-          ls
           cd config
 
       - name: Set up Terraform
@@ -34,24 +33,14 @@ jobs:
         with:
           terraform_version: 0.15.0
 
-      - name: Navigate to Terraform directory
-        run: |
-          cd config
-          ls
-
       - name: Terraform Init
         run: |
-          ls
           cd config
           terraform init
-          ls
 
       - name: Terraform Apply
         run: |
           cd config
-          terraform apply -auto-approve
-        env:
-          DIGITALOCEAN_TOKEN: ${{ secrets.DIGITALOCEAN_TOKEN }}
-          DATABASE_URL: $(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)
-
-
+          terraform apply -auto-approve \
+            -var "DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
+            -var "DIGITALOCEAN_TOKEN=${{ secrets.DIGITALOCEAN_TOKEN }}"
