--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -18,8 +18,8 @@ jobs:
       # - name: Build image 
       #   run: docker build -t registry.digitalocean.com/dev-ops-novi-api/api:$(echo $GITHUB_SHA | head -c7) .
 
-      # - name: Log in to DO Container Registry 
-      #   run: doctl registry login --expiry-seconds 600
+      - name: Log in to DO Container Registry 
+        run: doctl registry login --expiry-seconds 600
       
       # - name: Push image to DO Container Registry 
       #   run: docker push registry.digitalocean.com/dev-ops-novi-api/api:$(echo $GITHUB_SHA | head -c7)
