--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -23,6 +23,9 @@ jobs:
       
       # - name: Push image to DO Container Registry 
       #   run: docker push registry.digitalocean.com/dev-ops-novi-api/api:$(echo $GITHUB_SHA | head -c7)
+      
+      - name: Save DigitalOcean kubeconfig with short-lived credentials
+        run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 api-cluster
 
       - name: navigate to Terrafom folder before setup
         run: |
