--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -47,3 +47,8 @@ jobs:
           terraform apply -auto-approve \
             -var "DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
             -var "DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}"
+
+      - name: Deploy Kubernetes Manifests
+        run: |
+          cd config
+          kubectl apply -f kubernetes-manifests.yaml    
