--- a/config/kubernetes-manifests.yaml
+++ b/config/kubernetes-manifests.yaml
@@ -23,12 +23,16 @@ spec:
         app: novi-api
     spec:
       containers:
-        - name: devops-novi-api
-          image: registry.digitalocean.com/dev-ops-novi-api/api
-          imagePullPolicy: IfNotPresent
-          env:
-            - name: DATABASE_URL
-              value: ${DATABASE_URL}
+      - name: api
+        image: <IMAGE>
+        ports:
+        - containerPort: 80
+        env:
+          - name: DATABASE_URL
+            valueFrom:
+              secretKeyRef:
+                name: database-secret
+                key: database-url
 
 ---
 
