--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -1,7 +1,15 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: novi-api
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api
+  namespace: novi-api
   labels:
     app: api
 spec:
@@ -35,6 +43,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-service
+  namespace: novi-api
 spec:
   type: LoadBalancer
   ports:
