--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -59,7 +59,7 @@ jobs:
       
       - name: Add registry to cluster
         run: | 
-          kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "api-registry"}]}' -n novi-api
+          kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "api-registry"}]}'
 
       - name: Deploy to DigitalOcean Kubernetes
-        run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml -n novi-api
+        run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
