--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -54,9 +54,10 @@ jobs:
       
       - name: Create or update secrets
         run: |
-          kubectl create secret generic api-registry --from-file=.dockerconfigjson=docker-config.json --type=kubernetes.io/dockerconfigjson || true
-          kubectl create secret generic database-secret --from-literal=database-url=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header) || true
-      
+          kubectl delete secret api-registry || true
+          kubectl delete secret database-secret || true
+          kubectl create secret generic api-registry --from-file=.dockerconfigjson=docker-config.json --type=kubernetes.io/dockerconfigjson
+          kubectl create secret generic database-secret --from-literal=database-url=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)
       - name: Add registry to cluster
         run: | 
           kubectl patch serviceaccount default -p '{"imagePullSecrets": [{"name": "api-registry"}]}'
