--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -33,12 +33,15 @@ jobs:
         with:
           terraform_version: 0.15.0
 
-      - name: Terraform Init
+      - name: Terraform Plan
         run: |
           cd config
-          terraform init
+          terraform plan \
+            -var "DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
+            -var "DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+            -var "CLUSTER_NAME"="api-cluster" 
 
-      - name: Terraform Apply
+      - name: Terraform Apply 
         run: |
           cd config
           terraform apply -auto-approve \
