--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -38,13 +38,13 @@ jobs:
           cd config
           terraform init   
 
-      # - name: Import current resources   
-      #   run: |
-      #     cd config 
-      #     TF_VAR_DATABASE_URL="DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
-      #     TF_VAR_DIGITALOCEAN_ACCESS_TOKEN="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-      #     TF_VAR_CLUSTER_NAME="CLUSTER_NAME"="api-cluster" \
-      #     terraform import digitalocean_kubernetes_cluster.kubernetes-api-cluster $(doctl kubernetes cluster list --format ID --no-header)
+      - name: Import current resources   
+        run: |
+          cd config 
+          TF_VAR_DATABASE_URL="DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
+          TF_VAR_DIGITALOCEAN_ACCESS_TOKEN="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+          TF_VAR_CLUSTER_NAME="CLUSTER_NAME"="api-cluster" \
+          terraform import digitalocean_kubernetes_cluster.kubernetes-api-cluster $(doctl kubernetes cluster list --format ID --no-header)
 
       - name: Terraform Plan
         run: |
