import database cluster

--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -44,9 +44,18 @@ jobs:
           terraform import \
             -var="DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
             -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-            -var="CLUSTER_NAME=api-cluster" \
+            -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
+            -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
             digitalocean_kubernetes_cluster.kubernetes-api-cluster \
             $(doctl kubernetes cluster list --format ID --no-header)
+
+          terraform import \
+            -var="DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
+            -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+            -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
+            -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
+            digitalocean_database_cluster.database-cluster \
+            $(doctl databases cluster list --format ID --no-header)
 
       - name: Terraform Plan
         run: |
@@ -54,7 +63,8 @@ jobs:
           terraform plan \
             -var "DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
             -var "DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-            -var "CLUSTER_NAME"="api-cluster" 
+            -var "KUBERNETES_CLUSTER_NAME=api-cluster" \
+            -var "DATABASE_CLUSTER_NAME=database-devops-novi-api"
 
       - name: Terraform Apply 
         run: |
@@ -62,7 +72,8 @@ jobs:
           terraform apply -auto-approve \
             -var "DATABASE_URL=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)" \
             -var "DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-            -var "CLUSTER_NAME"="api-cluster"  
+            -var "KUBERNETES_CLUSTER_NAME=api-cluster" \
+            -var "DATABASE_CLUSTER_NAME=database-devops-novi-api" 
 
       - name: Update deployment file
         run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/dev-ops-novi-api/api:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
