--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -72,6 +72,9 @@ jobs:
             -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
             -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
             -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" 
+
+      - name: Upload registery
+        run: doctl registry kubernetes-manifest | kubectl apply -f -      
       
       - name: Get New Database URL
         run: |
@@ -92,9 +95,7 @@ jobs:
       
       - name: Create or update secrets
         run: |
-          # kubectl delete secret api-registry || true
-          # kubectl delete secret database-secret || true
-          kubectl create secret generic api-registry --from-file=.dockerconfigjson=docker-config.json --type=kubernetes.io/dockerconfigjson  || true
+          # kubectl delete secret database-secret || true 
           kubectl create secret generic database-secret --from-literal=database-url=$(doctl databases connection $(doctl databases list --format ID --no-header) --format URI --no-header)  || true
       
       - name: Add registry to cluster
