--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -22,6 +22,8 @@ spec:
       containers:
       - name: api
         image: <IMAGE>
+        imagePullSecrets:
+        - name: api-registry
         ports:
         - containerPort: 80
         env:
