--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -28,29 +28,23 @@ jobs:
       - name: Import current resources
         run: |
           cd config 
+          # Import Kubernetes Cluster
           terraform import \
-            -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-            -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-            -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-            -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
             digitalocean_kubernetes_cluster.kubernetes-api-cluster \
-            $(doctl kubernetes cluster list --format ID --no-header)
+            "$(doctl kubernetes cluster list --format ID --no-header)" \
+            "api-cluster"
 
+          # Import Database Cluster
           terraform import \
-            -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-            -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-            -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-            -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
             digitalocean_database_cluster.database-cluster \
-            $(doctl databases list --format ID --no-header)
+            "$(doctl databases list --format ID --no-header)" \
+            "database-devops-novi-api"
 
+          # Import Container Registry
           terraform import \
-            -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-            -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-            -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-            -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
             digitalocean_container_registry.container-registry \
-            $(doctl registry get --format Name --no-header)
+            "$(doctl registry get --format Name --no-header)" \
+            "dev-ops-novi-api"
 
       - name: Terraform Plan
         run: |
