--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: user-name
+      POSTGRES_USER: root
       POSTGRES_PASSWORD: strong-password
-      POSTGRES_DB: api
+      POSTGRES_DB: root
     volumes:
       - local_pgdata:/var/lib/postgresql/data
     healthcheck:
@@ -18,18 +18,6 @@ services:
       timeout: 5s
       retries: 5
   
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin4_container
-    restart: always
-    ports:
-      - "8888:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: user-name@domain-name.com
-      PGADMIN_DEFAULT_PASSWORD: strong-password
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
-
   api:
     build:
       context: .
@@ -39,7 +27,7 @@ services:
     volumes:
       - .:/api
     environment:
-      DATABASE_URL: postgresql://user-name:strong-password@db/api
+      DATABASE_URL: postgresql://root:strong-password@db/root
     depends_on:
       db:
         condition: service_healthy
