--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -26,64 +26,64 @@ jobs:
           cd config
           terraform init
 
-      - name: Import current resources
-        run: |
-          cd config 
-          if doctl kubernetes cluster list --format Name --no-header | grep -q "api-cluster"; then
-            terraform import \
-              -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-              -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-              -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-              -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
-              digitalocean_kubernetes_cluster.kubernetes-api-cluster \
-              $(doctl kubernetes cluster list --format ID --no-header)
+      # - name: Import current resources
+      #   run: |
+      #     cd config 
+      #     if doctl kubernetes cluster list --format Name --no-header | grep -q "api-cluster"; then
+      #       terraform import \
+      #         -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+      #         -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
+      #         -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
+      #         -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
+      #         digitalocean_kubernetes_cluster.kubernetes-api-cluster \
+      #         $(doctl kubernetes cluster list --format ID --no-header)
 
-              doctl kubernetes cluster kubeconfig save --expiry-seconds 600 api-cluster
+      #         doctl kubernetes cluster kubeconfig save --expiry-seconds 600 api-cluster
 
-              if kubectl get services -n loki-stack -o custom-columns=NAME:.metadata.name | head -n 2 | tail -n 1 | grep -q "loki"; then
-                # Run kubectl command to get services and extract UIDs
-                SERVICE_UIDS=$(kubectl get services -o custom-columns=UID:.metadata.uid | tail -n +2)
+      #         if kubectl get services -n loki-stack -o custom-columns=NAME:.metadata.name | head -n 2 | tail -n 1 | grep -q "loki"; then
+      #           # Run kubectl command to get services and extract UIDs
+      #           SERVICE_UIDS=$(kubectl get services -o custom-columns=UID:.metadata.uid | tail -n +2)
                 
-                # Import each service using Terraform
-                for UID in $SERVICE_UIDS; do
-                  terraform import \
-                    -var="SERVICE_UID=$UID" \
-                    -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-                    -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-                    -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-                    -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
-                    helm_release.loki $UID
-                done
-              else
-                echo "Loki-stack does not exist. Skipping import."
-              fi
-          else
-            echo "Kubernetes Cluster does not exist. Skipping import."
-          fi
+      #           # Import each service using Terraform
+      #           for UID in $SERVICE_UIDS; do
+      #             terraform import \
+      #               -var="SERVICE_UID=$UID" \
+      #               -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+      #               -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
+      #               -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
+      #               -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
+      #               helm_release.loki $UID
+      #           done
+      #         else
+      #           echo "Loki-stack does not exist. Skipping import."
+      #         fi
+      #     else
+      #       echo "Kubernetes Cluster does not exist. Skipping import."
+      #     fi
           
-          if doctl databases list --format Name --no-header | grep -q "database-devops-novi-api"; then
-            terraform import \
-              -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-              -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-              -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-              -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
-              digitalocean_database_cluster.database-cluster \
-              $(doctl databases list --format ID --no-header)  
-          else
-            echo "Database Cluster does not exist. Skipping import."
-          fi
+      #     if doctl databases list --format Name --no-header | grep -q "database-devops-novi-api"; then
+      #       terraform import \
+      #         -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+      #         -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
+      #         -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
+      #         -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
+      #         digitalocean_database_cluster.database-cluster \
+      #         $(doctl databases list --format ID --no-header)  
+      #     else
+      #       echo "Database Cluster does not exist. Skipping import."
+      #     fi
 
-          if doctl registry get --format Name --no-header | grep -q "dev-ops-novi-api"; then 
-            terraform import \
-              -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
-              -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
-              -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
-              -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
-              digitalocean_container_registry.container-registry \
-              $(doctl registry get --format Name --no-header)
-          else
-            echo "Container Registry does not exist. Skipping import."
-          fi  
+      #     if doctl registry get --format Name --no-header | grep -q "dev-ops-novi-api"; then 
+      #       terraform import \
+      #         -var="DIGITALOCEAN_ACCESS_TOKEN=${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}" \
+      #         -var="KUBERNETES_CLUSTER_NAME=api-cluster" \
+      #         -var="DATABASE_CLUSTER_NAME=database-devops-novi-api" \
+      #         -var="CONTAINER_REGISTRY_NAME=dev-ops-novi-api" \
+      #         digitalocean_container_registry.container-registry \
+      #         $(doctl registry get --format Name --no-header)
+      #     else
+      #       echo "Container Registry does not exist. Skipping import."
+      #     fi  
       
       - name: Terraform Plan
         run: |
