--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -122,6 +122,9 @@ jobs:
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 api-cluster
+
+      - name: label loki pods
+        run: kubectl label pods -l 'name=loki*' app=api
       
       - name: Create or update secrets
         run: |
