--- a/.github/workflows/deployTerra.yml
+++ b/.github/workflows/deployTerra.yml
@@ -124,7 +124,7 @@ jobs:
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 api-cluster
 
       - name: label loki pods
-        run: kubectl label pods -l 'name=loki*' app=api
+        run: kubectl label pods app=api --all=true --overwrite
       
       - name: Create or update secrets
         run: |
