--- a/.github/workflows/setupInfrastructure.yml
+++ b/.github/workflows/setupInfrastructure.yml
@@ -2,6 +2,7 @@ on:
   push:
     branches:
       - setup
+      - feature_monitoring_logging_terraform
       
 
 jobs:
@@ -63,9 +64,6 @@ jobs:
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 api-cluster
-
-      - name: label loki pods
-        run: kubectl label pods app=api --all=true --overwrite
       
       - name: Create or update secrets
         run: |
